# qt-curve-editor

./: .gitignore  CMakeLists.txt  README.md
cmake_config/: qt_support.cmake  utility.cmake
src/: CMakeLists.txt
src/cetest/: cetest.cpp  cetest.h  cetest.qrc  cetest.ui  main.cpp
src/curveeditor/: CMakeLists.txt  GlobalData.cpp  GlobalData.h  SplineDisplayerWidget.cpp  SplineDisplayerWidget.h  graphiceditor.cpp  graphiceditor.h  graphiceditor.ui  smGraphicsScene.cpp  smGraphicsScene.h
src/libspline/: aaCurve.cpp  aaCurve.h  spline.cpp  spline.h
